# amandacore

./: .command_settings  .gitignore  CMakeLists.txt  CMakePresets.json  Local Playable Slice Controls.lnk  README.md  combat-test-output.txt  e2e-after-talla-output.txt  e2e-milestone7-output.json  e2e-milestone7-output.txt  game.cfg  imgui.ini  milestone3_runtime_ticket.txt  project.json  required-go-test-output.txt  worlds-compile-output-2.txt  worlds-compile-output-3.txt  worlds-compile-output.txt
.github/workflows/: ci.yml  package-smoke.yml  security-sanity.yml
Client/Game/: README.md
Client/Launcher/: README.md
Client/Portal/: README.md  admin-portal.html  player-portal.html
Code/: enabled_gems.cmake
Content/Schemas/: ability-v1.schema.json  content-package-v1.schema.json  dialogue-v1.schema.json  gameplay.schema.json  hook-v1.schema.json  item-v1.schema.json  loot-v1.schema.json  npc-v1.schema.json  platform.schema.json  quest-v1.schema.json  trainer-v1.schema.json  vendor-v1.schema.json  zone-v1.schema.json
Docs/: Architecture.md  CleanRoomReferencePolicy.md  CombatLoop.md  ContentPackageLoader.md  ContentPipeline.md  DatabaseMigrations.md  DawnwakeIsles.md  DawnwakeIslesWorldSkeleton.md  DawnwakeLoadTesting.md  LoadTesting.md  LootQuestProgression.md  ManualPlayableSliceRunbook.md  Milestone01-AccountToWorld.md  Milestone02-O3DEClient.md  Milestone15-MultiClientStability.md  Milestone16-335a-Gameplay-UI-Systems-Roadmap.md  Milestone18-335a-Inspired-Guild-Next-Steps.md  Milestone8-335a-Inspired-Next-Steps.md  MultiZoneSharding.md  O3DEMapExportWorkflow.md  Persistence.md  PlayableSliceAcceptance.md  ReferenceWorkflow.md  RuntimeContract.md  ServerInteractionPipeline.md  WorldStreaming.md  ZoneHandoffShardCoordinator.md
Docs/Architecture/: AuthoritativeWorldLoop.md  ContentCompilerRuntimeBoundary.md  PersistenceInventory.md  PersistenceRedesign.md  ProductionCutoverScaleRelease.md  ReliabilitySecurityCI.md  ReplicationAndClientConvergence.md  SocialEconomyTransactionality.md  TransactionalCharacterState.md  WorldLoopCombatQuestLoot.md
Docs/Art/: AssetPipeline.md  TextureImportAudit-0.2.md
Docs/Config/: amandacore.dev.env.example
Gems/: README.md
Registry/: assetprocessor_settings.setreg  load_level.setreg
Services/: README.md  go.mod  go.sum  required-go-test-output.txt
Shared/AmandaCoreShared/: CMakeLists.txt
Shared/AmandaCoreShared/Include/AmandaCoreShared/: ContentValidation.h  Contracts.h  CoreTypes.h  GameplayRules.h  Messages.h  PlatformTypes.h
Shared/AmandaCoreShared/Source/: ContentValidation.cpp  GameplayRules.cpp
Shared/AmandaCoreShared/Tests/: AmandaCoreSharedTests.cpp
(+554 files in other folders)
